<resources>
    <string name="app_name">Calculator</string>
    <string name="prompt">Select Operator</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtTitle">Basic Calculator</string>
    <string-array name="txtOperators">
        <item>Plus</item>
        <item>Minus</item>
        <item>Multiplied by</item>
        <item>Divided by</item>
    </string-array>
    <string name="txtNum1">Numbers Only</string>
    <string name="txtNum2">Numbers Only</string>
</resources>